helm/ingress/studentgrade-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studentgrade-ingress
  namespace: grade-submission
  labels:
    app.kubernetes.io/name: studentgrade-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
      - path: /marks
        pathType: Prefix
        backend:
          service:
            name: studentgrade-api-service
            port:
              number: 5000
